Fix overflow for nav dropdowns.

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -35,7 +35,6 @@ header {
 
 header .navbar {
   position: fixed !important;
-  overflow: hidden;
 }
 
 .td-navbar {
@@ -140,7 +139,7 @@ header .navbar {
         }
       }
 
-      .dropdown-menu {
+      .dropdown {
         &:hover {
           color: $medium-grey;
         }
